Add functional tests using real service